Fix spacing inside ul's

--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -49,6 +49,10 @@
     @apply pl-5;
   }
 
+  ul ul {
+    @apply pt-2;
+  }
+
   li {
     @apply my-2;
   }
